--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,12 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+    maven { url "https://jitpack.io" }
+}
+
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.0'
@@ -37,6 +43,8 @@ dependencies {
     implementation "android.arch.core:runtime:1.1.1"
     implementation "android.arch.core:common:1.1.1"
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.spotify.android:auth:1.1.0'
+    implementation 'com.github.kaaes:spotify-web-api-android:0.4.1'
 
     // Check for v11.4.2 or higher
     implementation 'com.google.firebase:firebase-core:16.0.4'
